// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic rendering case snapshot 1`] = `
.c0 {
  color: inherit;
  padding: 0;
  margin: 0 0 0.25em 0.25em;
  line-height: inherit;
}

<li
  class="c0"
  style="color:orange;font-size:16px"
>
  some text1
  <span>
    some text2
  </span>
</li>
`;

exports[`basic rendering case snapshot with theme 1`] = `
.c0 {
  color: red;
  padding: 0 1rem;
  margin: 18;
  line-height: inherit;
}

<li
  class="c0"
  style="color:orange;font-size:16px"
>
  some text1
  <span>
    some text2
  </span>
</li>
`;
